Changes to Accommodate Code Generation and Change to Unchecked Exceptions
* Removed method throws CUSTOM_EXCEPTION as they've been converted to unchecked exceptions
* Changed NOT_FOUND from a 400 to a 404 for better error handling. Also more in-line with the HTTP API spec
* Moved generated code to a 'generated' package so that it can be excluded from code coverage. This may not be good practice, but the modifying the code is out of the question anyway so testing it wouldn't be as helpful as testing handwritten code
