# api.yaml
@@ -40,6 +40,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ResponseContainerUserDto'
+        '400':
+          description: Client Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
         '500':
           description: Internal error has occurred
           content:
@@ -68,6 +80,12 @@ paths:
                 $ref: '#/components/schemas/ResponseContainerUserDto'
         '400':
           description: Client Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+        '404':
+          description: Not Found
           content:
             application/json:
               schema:
@@ -101,6 +119,12 @@ paths:
                 $ref: '#/components/schemas/ResponseContainerWorkspaceDto'
         '400':
           description: Client Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+        '404':
+          description: Not Found
           content:
             application/json:
               schema:
@@ -165,6 +189,12 @@ paths:
                 $ref: '#/components/schemas/ResponseContainerUserDto'
         '400':
           description: Client Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+        '404':
+          description: Not Found
           content:
             application/json:
               schema:
@@ -266,6 +296,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorDetails'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
         '500':
           description: Internal Server Error
           content:
@@ -295,6 +331,12 @@ paths:
                 $ref: '#/components/schemas/ResponseContainerUserDto'
         '400':
           description: Client Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+        '404':
+          description: Not Found
           content:
             application/json:
               schema:
